fix: Update add contact button style for improved visibility

--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -54,7 +54,6 @@ button {
 }
 
 .btn-add-contacts {
-    width: 100%;
     height: 56px;
     padding: 12px 0;
     gap: 16px;
@@ -69,4 +68,8 @@ button {
     font-size: 21px;
     color: white;
     transition: background-color 100ms ease-in-out, box-shadow 100ms ease-in-out;
+}
+
+.btn-add-contacts-large {
+    width: 100%;
 }
